[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/TextBox.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Commodore Angled v1.2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/audio/typing-sound.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 2 )

[node name="TextBox" type="Polygon2D"]
modulate = Color( 0.415686, 0.352941, 0.352941, 1 )
position = Vector2( 846.234, 73 )
color = Color( 0.431373, 0.631373, 0.443137, 0.462745 )
offset = Vector2( -847, -73 )
polygon = PoolVector2Array( 50, 50, 600, 50, 600, 650, 50, 650 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -747.0
margin_top = 30.242
margin_right = -297.0
margin_bottom = 524.242
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "“..wasn’t even a good game. The graphics weren’t good, the art wasn’t good, the music was ok..”
“..stanford prison experiment. They kept going because they were told to do something and were afraid of the repercussions..”
“..some enjoyed the “meta” aspect of the game such as the self-referential signals describing this very convention, while others criticized it as “corny” or “cheap”..
“..what they didn’t realize is that they were enslaved by the game creator..”
“..my daughter wouldn’t stop playing it. I kept telling her, “you’re mining!” I eventually yelled “You’re a slave to the machine!”
“..app hit #1 on the app store. A whole society enslaved to the plight of one man and his desire for eternal wealth.”
“..what they didn’t realize is that they were literally mining. Every request was a real web request to a remote server that validated the hashes..” 
Welcome to a game about nothing. :D "
text = "“..wasn’t even a good game. The graphics weren’t good, the art wasn’t good, the music was ok..”
“..stanford prison experiment. They kept going because they were told to do something and were afraid of the repercussions..”
“..some enjoyed the “meta” aspect of the game such as the self-referential signals describing this very convention, while others criticized it as “corny” or “cheap”..
“..what they didn’t realize is that they were enslaved by the game creator..”
“..my daughter wouldn’t stop playing it. I kept telling her, “you’re mining!” I eventually yelled “You’re a slave to the machine!”
“..app hit #1 on the app store. A whole society enslaved to the plight of one man and his desire for eternal wealth.”
“..what they didn’t realize is that they were literally mining. Every request was a real web request to a remote server that validated the hashes..” 
Welcome to a game about nothing. :D "
scroll_active = false
scroll_following = true

[node name="VisibleTextTimer" type="Timer" parent="RichTextLabel"]
wait_time = 0.03
autostart = true

[node name="NextLineTimer" type="Timer" parent="RichTextLabel"]
one_shot = true

[node name="QueueVarTimer" type="Timer" parent="RichTextLabel"]
wait_time = 0.5
one_shot = true

[node name="ChannelFrequencyText" type="RichTextLabel" parent="."]
margin_left = -774.068
margin_top = -9.11452
margin_right = -449.068
margin_bottom = 15.8855
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.403922, 0.337255, 0.270588, 1 )
text = "Channel Frequency: 89.1 MHz"

[node name="SIGINTText" type="RichTextLabel" parent="."]
margin_left = -333.158
margin_top = -10.1598
margin_right = -258.158
margin_bottom = 14.8402
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.403922, 0.337255, 0.270588, 1 )
text = "SIGINT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.4
pitch_scale = 3.01
[connection signal="timeout" from="RichTextLabel/VisibleTextTimer" to="." method="_on_VisibleTextTimer_timeout"]
[connection signal="timeout" from="RichTextLabel/NextLineTimer" to="." method="_on_NextLineTimer_timeout"]
[connection signal="timeout" from="RichTextLabel/QueueVarTimer" to="." method="_on_QueueVarTimer_timeout"]
